update operator, operands and expressions file

--- a/Operators, Operands and Expressions.ipynb
+++ b/Operators, Operands and Expressions.ipynb
@@ -12,7 +12,8 @@
     "Python divides the operators in the following groups:\n",
     "<li>Arithmetic operators</li>\n",
     "<li>Comparison operators</li>\n",
-    "<li>Logical operators</li>"
+    "<li>Logical operators</li>\n",
+    "<li>Assigment operators</li>"
    ]
   },
   {
